--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,24 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Follow the links to perform the following Steps</h1>
+        <ul>
+            <li>
+                <a href="/colleges/">List of Already Available Colleges</a>
+            </li><br>
+            <li>
+                <a href="/add_college/">Add college to List of Already Available Colleges</a>
+            </li><br>
+            <li>
+                <a href="/add_student/">Add Students List of Already Available Colleges</a>
+            </li><br>
+        </ul>
+       
+    </body>
+</html>
